src/App.css
html {
    scroll-behavior: smooth;
}

.app-layout {
    display: flex;
}

.content {
    margin-left: 220px;
    width: calc(100% - 220px);
}

.content {
    margin-left: 220px;
    width: calc(100% - 220px);
}

.section-divider {
    height: 1px;

    background:
        linear-gradient(to right,
            transparent,
            rgba(97, 218, 251, 0.25),
            transparent);
}

@media (max-width: 768px) {

    .content {
        margin-left: 0;
        width: 100%;
    }

}

.menu-btn {
    position: fixed;
    top: 15px;
    right: 15px;

    background: transparent;
    border: none;

    z-index: 2000;
}

.menu-icon {
    color: white;
    font-size: 28px;

    padding: 10px;

    border: 2px solid rgba(255, 255, 255, .5);
    border-radius: 10px;

    background: rgba(0, 0, 0, .2);
}

@media (max-width:768px) {

    .menu-btn {

        display: flex;
    }

}

